# adguard-cli-gui

./: .abacus.donotdelete  Cargo.toml  README.md  run.sh
src/: app.rs  cli.rs  main.rs  theme.rs
