[package]
name = "adguard-cli-gui"
version = "0.1.0"
edition = "2024"
description = "GUI for AdGuard CLI ad blocker"
authors = ["al"]

[[bin]]
name = "adguard-cli-gui"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
regex = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
